# InVivoSuite

./: .gitignore  README.md  data_analysis.py  data_processing.py  file-setup.py  final-analysis.py  final_analysis.py  mp_files.py  mp_test.py  pyproject.toml  spike-analysis.py  spike-lfp-analysis.py  spikeforest_test.py  usage.py
invivosuite/: __init__.py  __main__.py
invivosuite/acq/: __init__.py  acq_manager.py  fast_multitaper.py  filtering_functions.py  lfp.py  lfp_manager.py  load_ad.py  phy_loader.py  spike.py  spike_lfp_manager.py  spike_manager.py  spike_metrics.py  spk_parallel_proc.py  tapered_spectra.py  utils.py  wavelet.py
invivosuite/acq/pypl2/: __init__.py  pypl2api.py  pypl2lib.py
invivosuite/acq/spike_functions/: __init__.py  binarize_spikes.py  continuous_fr.py  gte.py  max_interval_bursts.py  spike_ccg.py  spike_extraction.py  spike_freq_adapt.py  spike_metrics.py  sttc_methods.py  synthetic_spike_train.py
invivosuite/acq/spike_lfp_functions/: circular_stats.py
invivosuite/asymp_pdc/: __init__.py  arfit.py  mvar_algs.py  pdc.py  pdc_utilities.py
invivosuite/csd/: basis.py  container_classes.py  kcsd.py  kcsd2d.py  utils.py
invivosuite/functions/: __init__.py  circular_stats.py  curve_fit.py  filter_functions.py  signal_functions.py
invivosuite/functions/analysis/: wavemap.py
invivosuite/functions/lfp_functions/: __init__.py  bosc.py  burst_finding.py  cross_frequency_coupling.py  irasa.py  phase_discontinuity.py  phase_surrogate.py  phase_synchrony.py
invivosuite/functions/simulation/: izhikevich.py
invivosuite/functions/spike_functions/: __init__.py  continuous_fr.py  gte.py  intrinsic_timescale.py  lziv.py  network_functions.py  seqnmf.py  spike.py  spike_correlation_index.py  spike_extraction.py  spike_freq_adapt.py  spike_metrics.py  spike_synchrony.py  sttc_methods.py  synthetic_spike_train.py  word_analysis.py
invivosuite/functions/spike_lfp_functions/: __init__.py  circular_stats.py  spike_phase.py  spike_power.py
invivosuite/gui/: gui_widgets.py  lfp_window.py  main_window.py
invivosuite/spectral/: __init__.py  coherence_funcs.py  fast_multitaper.py  fcwt_cwt.py  fft.py  fftw_wisdom.py  fooof.py  frequencies.py  mne_wavelet.py  spectral_utilities.py  superlets.py  tapered_spectra.py  wavelet.py  wavelet_ft.py  wavelet_utils.py  wavelets.py
invivosuite/utils/: __init__.py  analysis_funcs.py  circular_stats.py  config.py  fftw_wisdom.py  funcs.py  plot_funcs.py  signal_funcs.py  utility_funcs.py
