[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "invivosuite"
description = "In vivo electrophysiology analysis package for analyzing LFPs and spikes from Kilosort."
readme = "README.md"
authors = [{ name = "Lars Henrik Nelson", email = "larshnelson@protonmail.com" }]
version = "2024.07.25"
keywords = ["electrophysiology", "analysis"]
dependencies = [
    "fcwt",
    "h5py",
    "joblib",
    "KDEpy",
    "matplotlib",
    "networkx",
    "numba",
    "numpy",
    "pyFFTW",
    "PyWavelets",
    "scikit-learn",
    "scipy",
    "send2trash",
    "spectrum",
    "statsmodels"

]
requires-python = ">=3.9"
license = {text = 'GNU General Public License v3 (GPLv3)'}

[project.optional-dependencies]
plotting = [
    "matplotlib",
]

[project.urls]
Homepage = "https://github.com/LarsHenrikNelson/InVivoSuite"